# llm-wiki

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.ci.yml  docker-compose.yml  pyproject.toml  questions.txt  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  integration.yml
Data_Files/: AIAgentEvaluationPlatformMethodologies.html
src/: api.py  config.py  graph.py  ingest.py  lint.py  llm.py  logging_config.py  mcp_server.py  query.py  router.py  scheduler.py
src/loaders/: __init__.py  csv_loader.py  docx_loader.py  elements.py  html_loader.py  md_loader.py  pdf_loader.py  pptx_loader.py  xlsx_loader.py
src/search/: bm25_index.py  contextual.py  dense_index.py  hybrid.py  intent.py  mmr.py  multi_query.py  multimodal.py  relevance_eval.py  reranker.py
src/static/: index.html
src/synth/: __init__.py  blocks.py  claims.py  followups.py  reflect.py
src/wiki/: compaction.py  contradiction_resolver.py  entity_pages.py  episodic.py  index_md.py  lifecycle.py  log_md.py  pages.py  procedures.py  promote.py  reconciler.py  synth_page.py
tests/: conftest.py  test_api.py  test_bm25.py  test_graph.py  test_hybrid.py  test_ingest.py  test_logging.py
tests/integration/: test_e2e.py
wiki/: index.md  log.md
wiki/episodic/: 2026-05-01.md
