[project]
name = "llm-wiki-poc"
version = "0.1.0"
description = "Dynamic compounding wiki built from local LLMs (Ollama)"
requires-python = ">=3.11"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = [
    "E501",   # line too long — formatter handles
    "E402",   # module-level import not at top — common after env-var setup
    "E741",   # ambiguous variable name (l, I, O)
    "E702",   # multi-statement line — intentional in compact data tables
    "B008",   # function call in default arg (common pattern with FastAPI Depends)
    "B023",   # function does not bind loop var (false-positive prone)
    "SIM102", # collapsible nested if — readability often wins
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["F401", "F811", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: tests that require a live Ollama instance",
]
